--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegram-download-bot",
+  "name": "telegram-video-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
