--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "index.js", "use": "@vercel/node" },
+    { "src": "api/cleanup.js", "use": "@vercel/node" }
   ],
   "routes": [
+    { "src": "/api/cleanup", "dest": "api/cleanup.js" },
+    { "src": "/(.*)", "dest": "index.js" }
+  ],
+  "crons": [
     {
-      "src": "/(.*)",
-      "dest": "index.js",
-      "methods": ["GET", "POST"]
+      "path": "/api/cleanup",
+      "schedule": "0 * * * *" // Hourly
     }
   ]
 }
